--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "geojson-to-svg": "git://github.com/kroneman/geojson2svg.git#src-kroneman.io",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
@@ -36,9 +35,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "geojson-to-svg": "git://github.com/kroneman/geojson2svg.git#src-kroneman.io",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
