--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 VUE_APP_ANALYTICS_ID="UA-xxxxxxxxx-x"
 
-# None of the credentials below are actuall...
+# None of the credentials below are actual
 MAPBOX_USER_NAME=
 MAPBOX_ACCESSTOKEN=
 MAPBOX_COUNTRYDATASETID=
