deployment test one

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,5 @@ jobs:
       run: yarn
     - name: Run tests
       run: yarn build
+    - name: Build to kroneman.github.io
+      run: ${GITHUB_WORKSPACE}/bin/deploy-v2
